versions/v4.0.0/build/dts/api/bindings/gpio/panasonic,reduced-arduino-header.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/gpio/panasonic,reduced-arduino-header.html
original_path: build/dts/api/bindings/gpio/panasonic,reduced-arduino-header.html
---

# panasonic,reduced-arduino-header

Vendor: [Panasonic Corporation](../../bindings.md#dt-vendor-panasonic)

## Description

```text
Panasonic's reduced Arduino header.

                              D15    21
                              D14    20
                              AREF   -
                              GND    -
    -   N/C                   D13    19
    -   IOREF                 D12    18
    -   RESET                 D11    17
    -   3V3                   D10    16
    -   5V                    D9     NC
    -   GND                   D8     NC
    -   GND
    -   VIN                   D7     NC
                              D6     NC
    0   A0                    D5     11
    1   A1                    D4     10
    2   A2                    D3     9
    3   A3                    D2     8
    NC  A4                    D1     7
    NC  A5                    D0     6

Panasonic's reduced Arduino header is based on the Arduino UNO layout
and provides four different headers. The main difference is that some
pins are not available due to the lack of pins on the Panasonic module.
These unconnected pins are labeled "NC" in the mapping above.

So:

1. Power Supply header exactly, like on Arduino UNO layout.

2. Analog Input header, like on Arduino UNO layout, but A4 and A5 are
not connected.

3. 8-pin header (opposite Analog Input).  Digital input signals, like on
Arduino UNO layout, labeled from D0 at the bottom to D7 at the top, but D6
and D7 are not connected.

4. 10-pin header (opposite Power Supply). Digital input signals, like on
Arduino UNO layout, labeled from D8 at the bottom through D15 at the top,
but D8 and D9 are not connected.
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `gpio-map` | `compound` | This property is **required**. |
| `gpio-map-mask` | `compound` |  |
| `gpio-map-pass-thru` | `compound` |  |
| `#gpio-cells` | `int` | ```text Number of items to expect in a GPIO specifier ```  This property is **required**. |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “panasonic,reduced-arduino-header” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
